<resources>
    <string name="app_name">Scarlet</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="scarlet_string">Scarlet</string>
    <string name="sign_in_string">Sign in</string>
    <string name="or_string">Or</string>
    <string name="already">You`ve already have an account</string>
    <string name="password_string">Password</string>
    <string name="username_or_email_string">Username or email</string>
    <string name="sign_in_ek1_string">Sign in</string>
    <string name="forgot_password__string">Forgot password?</string>
    <string name="_create_account__string">Create account?</string>
    <string name="sign_up_string">Sign up</string>
    <string name="confirm_password_string">Confirm password</string>
    <string name="_sign_up_ek1_string">Sign up</string>
    <string name="search_string">Search</string>
    <string name="uit_string">UIT</string>
    <string name="menu_string">Menu</string>
    <string name="home_string">Home</string>
    <string name="favourite_string">Favourite</string>
    <string name="deals_string">Deals</string>
    <string name="account_string">Account</string>
    <string name="cart_string">Cart</string>
    <string name="black_coffee_string">Black coffee</string>
    <string name="_120_000__string">120.000</string>
    <string name="black_coffee_ek1_string">Black coffee</string>
    <string name="_120_000__ek1_string">120.000</string>
    <string name="black_coffee_ek2_string">Black coffee</string>
    <string name="_120_000__ek2_string">120.000</string>
    <string name="black_coffee_ek3_string">Black coffee</string>
    <string name="_120_000__ek3_string">120.000</string>
    <string name="all_string">All</string>
    <string name="buns_string">Buns</string>
    <string name="drinks_string">Drinks</string>
    <string name="add_to_cart_string">Add to Cart</string>
    <string name="_20_000__string">20.000</string>
    <string name="size_string">Size</string>
    <string name="small_string">Small</string>
    <string name="medium_string">Medium</string>
    <string name="large_string">Large</string>
    <string name="_5_string">5</string>
    <string name="_09_41_string">09:41</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
        officia deserunt mollit anim id est laborum.</string>
    <string name="favourite_ek1_string">Favourite</string>
    <string name="black_friday_string">Black Friday</string>
    <string name="discount_50__for_every_product_string">Discount 50% for every product</string>
    <string name="order_now_string">Order now</string>
    <string name="faqs_string">FAQs</string>
    <string name="user_zjh_string">User</string>
    <string name="account_ek1_string">Account</string>
    <string name="order_string">Order</string>
    <string name="general_information_string">General Information</string>
    <string name="profile_ek2_string">Profile</string>
    <string name="settings_ek2_string">Settings</string>
    <string name="order_activities_string">Order Activities</string>
    <string name="policies_string">Policies</string>
    <string name="loyalty_program_string">Loyalty Program</string>
    <string name="about_app_version_string">About App Version</string>
    <string name="faqs_ek1_string">FAQs</string>
    <string name="feedback___support_string">Feedback &amp; Support</string>
    <string name="help_center_string">Help Center</string>
    <string name="sign_out_string">Sign out</string>
    <string name="your_cart_string">Your cart</string>
    <string name="_20_25min_string">20-25min</string>
    <string name="total_string">Total</string>
    <string name="_20_000__ek1_string">20.000</string>
    <string name="_1_string">1</string>
    <string name="size__string">Size:</string>
    <string name="checkout_string">Checkout</string>
    <string name="profile_string">Profile</string>
    <string name="point__120_string">Point: 120</string>
    <string name="abca_string">abca</string>
    <string name="member_string">Member</string>
    <string name="edit_string">Edit</string>
    <string name="edit_ek1_string">Edit</string>
    <string name="mobile_number_string">Mobile Number</string>
    <string name="email_string">Email</string>
    <string name="linked_accounts_string">Linked Accounts</string>
    <string name="user_string">User</string>
    <string name="__84_string">+84</string>
    <string name="gender_string">Gender</string>
    <string name="birthday_string">Birthday</string>
    <string name="email_ek1_string">Email</string>
    <string name="abca_ek1_string">abca</string>
    <string name="_0909432123_string">0909432123</string>
    <string name="google_string">Google</string>
    <string name="facebook_string">Facebook</string>
    <string name="save_string">Save</string>
    <string name="last_name_string">Last Name</string>
    <string name="first_name_string">First Name</string>
    <string name="select_string">Select</string>
    <string name="settings_string">Settings</string>
    <string name="setup_account_string">Setup Account</string>
    <string name="security_string">Security</string>
    <string name="delete_account_string">Delete Account</string>
    <string name="change_passsword_string">Change Passsword</string>
    <string name="app_version_1_0_string">App Version 1.0</string>
    <string name="___ng_h_n_thuy_n__khu_ph__6_p__th____c__th_nh_ph__h__ch__minh_string">ng Hn Thuyn, khu ph 6 P, Th c, Thnh ph H Ch Minh</string>
    <string name="team_10_string">Team 10</string>
    <string name="change_password_string">Change Password</string>
    <string name="change_password_ek1_string">Change Password</string>
    <string name="enter_old_password_string">Enter Old Password</string>
    <string name="new_password_string">New Password</string>
    <string name="password_must_be_at_least_8_characters_string">Password must be at least 8 characters</string>
    <string name="change_password_ek2_string">Change Password</string>
    <string name="confirmation__aaaaaaa_string">Confirmation #AAAAAAA</string>
    <string name="thank_you__aria__string">Thank you, Aria!</string>
    <string name="your_order_is_confirmed_string">Your order is confirmed</string>
    <string name="track_your_order_string">Track your order</string>
    <string name="we_ve_accepted_your_order__and_we_re_getting_it_ready__come_back_to_this_page_for_updates_on_your_shipment_status__string">Weve accepted your order, and were getting it ready. Come back to this page for updates on your shipment status.</string>
    <string name="cart_ek1_string">Cart</string>
    <string name="delivery_ek1_string">Delivery</string>
    <string name="payment_string">Payment</string>
    <string name="delivery_method_string">Delivery Method</string>
    <string name="order_summary_string">Order Summary</string>
    <string name="discount_ek1_string">Discount</string>
    <string name="delivery_address_string">Delivery Address</string>
    <string name="deliver_to_string">Deliver to</string>
    <string name="change_string">Change</string>
    <string name="uit_____________________________string">UIT,...........................</string>
    <string name="_1_item_string">1 Item</string>
    <string name="_2_000__string">2.000</string>
    <string name="_0__string">0</string>
    <string name="_22_000__string">22.000</string>
    <string name="sub_total_string">Sub-total</string>
    <string name="delivery_ek2_string">Delivery</string>
    <string name="delivery_ek3_string">Delivery</string>
    <string name="pick_up_string">Pick up</string>
    <string name="discount_code_string">Discount code</string>
    <string name="apply_string">Apply</string>
    <string name="discount_ek2_string">Discount</string>
    <string name="continue_to_payment_string">Continue To Payment</string>
    <string name="delivery_string">Delivery</string>
    <string name="payment_ek1_string">Payment</string>
    <string name="payment_ek2_string">Payment</string>
    <string name="credit_card_string">Credit card</string>
    <string name="all_transactions_are_secure_and_encrypted__string">All transactions are secure and encrypted.</string>
    <string name="card_number_string">Card number</string>
    <string name="name_on_card_string">Name on card</string>
    <string name="expiration_date__mm_yy__string">Expiration date (MM/YY)</string>
    <string name="security_code_string">Security code</string>
    <string name="remember_me_string">Remember me</string>
    <string name="pay_now_string">Pay now</string>
    <string name="save_my_information_for_a_faster_checkout_string">Save my information for a faster checkout</string>
    <string name="we_are_working_on_your_order__string">We are working on your order.</string>
    <string name="order_recieved__string">Order Recieved.</string>
    <string name="order_being_prepared__string">Order Being Prepared.</string>
    <string name="out_for_delivery_string">Out For Delivery</string>
    <string name="delivered_string">Delivered</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_product">Product</string>
    <string name="menu_order">Order</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_voucher">Voucher</string>
    <string name="menu_offer">Offer</string>
    <string name="menu_statistics">Revenue statistics</string>
    <string name="menu_chart">Chart</string>
    <string name="menu_back">Back to app</string>
    <string name="menu_signout">Sign out</string>
</resources>