<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/home_ek1"
            android:title="@string/menu_home"/>
        <item android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/menu_category"/>
        <item android:id="@+id/nav_product"
            android:icon="@drawable/cake11"
            android:title="@string/menu_product"/>
        <item android:id="@+id/nav_order"
            android:icon="@drawable/shopping_basket"
            android:title="@string/menu_order"/>
        <item android:id="@+id/nav_customer"
            android:icon="@drawable/customer"
            android:title="@string/menu_customer"/>
        <item android:id="@+id/nav_voucher"
            android:icon="@drawable/voucher"
            android:title="@string/menu_voucher"/>
        <item android:id="@+id/nav_offer"
            android:icon="@drawable/coupon_1"
            android:title="@string/menu_offer"/>
        <item android:id="@+id/nav_statistics"
            android:icon="@drawable/increase"
            android:title="@string/menu_statistics"/>
        <item android:id="@+id/nav_chart"
            android:icon="@drawable/statistics"
            android:title="@string/menu_chart"/>
    </group>
    <item android:id="@+id/nav_back"
        android:icon="@drawable/building"
        android:title="@string/menu_back"/>
    <item android:id="@+id/nav_signout"
        android:icon="@drawable/logout"
        android:title="@string/menu_signout"/>
</menu>